Remove extra pages

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,4 @@
 <header>
     <h1>{{title}}</h1>
-    <a href="/">Weather</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+    <p>Site created with Node.js, using data from Mapbox.com and DarkSky.net.</p>>
 </header>
