--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,4 +1,4 @@
 <header>
     <h1>{{title}}</h1>
-    <p>Site created with Node.js, using data from Mapbox.com and DarkSky.net.</p>>
+    <p>Site created with Node.js, using data from Mapbox.com and DarkSky.net.</p>
 </header>
